correctif filtre date

--- a/app/src/main/res/layout/activity_recherche_table_step1.xml
+++ b/app/src/main/res/layout/activity_recherche_table_step1.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".invite.rechercherUneTable.RechercherTableStep1"
     android:background="@drawable/background">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/topLayoutRecherchetablestep1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -34,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_alignParentBottom="true" >
+        android:layout_below="@id/topLayoutRecherchetablestep1" >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,7 +69,7 @@
                     android:layout_height="150dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
-                    android:background="@color/white"
+                    android:background="@color/red"
                     android:calendarViewShown="false"
                     android:datePickerMode="spinner"
                     android:startYear="2020"
@@ -390,5 +394,5 @@
             android:onClick="onClickRechercherTableButton" />
 
     </LinearLayout>
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
