--- a/app/src/main/res/layout/activity_recherche_table_step3.xml
+++ b/app/src/main/res/layout/activity_recherche_table_step3.xml
@@ -38,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/validerTable"
+        android:fontFamily="@font/indie_flower"
         android:textColor="@color/black"
         android:layout_gravity="center"
         android:onClick="onClickValiderBoutton"/>
