--- a/app/src/main/res/layout/fragment_recycler_view_table_item.xml
+++ b/app/src/main/res/layout/fragment_recycler_view_table_item.xml
@@ -14,7 +14,10 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER ENTREE" />
+        android:text="TABLE PLACEHOLDER ENTREE"
+        android:background="@color/white"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp"/>
 
     <TextView
         android:id="@+id/nomPlatTable"
@@ -24,7 +27,10 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER PLAT" />
+        android:text="TABLE PLACEHOLDER PLAT"
+        android:background="@color/white"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp"/>
 
     <TextView
         android:id="@+id/nomDessertTable"
@@ -34,7 +40,10 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER DESSERT" />
+        android:text="TABLE PLACEHOLDER DESSERT"
+        android:background="@color/white"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp"/>
 
     <TextView
         android:id="@+id/prixTable"
@@ -44,7 +53,10 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER PRIX" />
+        android:text="TABLE PLACEHOLDER PRIX"
+        android:background="@color/white"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp"/>
 
     <TextView
         android:id="@+id/dateTable"
@@ -54,7 +66,10 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER DATE" />
+        android:text="TABLE PLACEHOLDER DATE"
+        android:background="@color/white"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp"/>
 
     <TextView
         android:id="@+id/heureTable"
@@ -64,7 +79,10 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER HEURE" />
+        android:text="TABLE PLACEHOLDER HEURE"
+        android:background="@color/white"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp"/>
 
     <TextView
         android:id="@+id/adresseTable"
@@ -74,7 +92,10 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER ADRESSE" />
+        android:text="TABLE PLACEHOLDER ADRESSE"
+        android:background="@color/white"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp"/>
 
     <TextView
         android:id="@+id/nomTheme"
@@ -84,12 +105,17 @@
         android:textColor="@color/black"
         android:textSize="@dimen/bigSize"
         android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER THEME" />
+        android:text="TABLE PLACEHOLDER THEME"
+        android:background="@color/white"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="12dp">
 
         <Button
             android:id="@+id/tableFumeur"
