--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -4,85 +4,239 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="@dimen/mediumSize"
-    android:background="@color/yellow">
-    <TextView
-        android:id="@+id/nomEntreeTableBis"
+    android:background="@color/yellow"
+    android:layout_margin="@dimen/mediumSize">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
-        android:textSize="@dimen/bigSize"
-        android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER ENTREE"
-        android:background="@color/white"
-        android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="12dp"/>
+        android:orientation="vertical"
+        android:layout_margin="@dimen/mediumSize"
+        android:background="@color/yellow"
+        >
 
-    <TextView
-        android:id="@+id/nomPlatTableBis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
-        android:textSize="@dimen/bigSize"
-        android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER PLAT"
-        android:background="@color/white"
-        android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="12dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/nomDessertTableBis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
-        android:textSize="@dimen/bigSize"
-        android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER DESSERT"
-        android:background="@color/white"
-        android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="12dp"/>
+            <TextView
+                android:id="@+id/nomEntreeFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="center_horizontal"
+                android:text="Mon Entree"
+                android:textColor="@color/black"
+                android:textSize="@dimen/bigSize"></TextView>
+            <RatingBar
+                android:id="@+id/difficulteEntreeFragment"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/lightYellow"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:isIndicator="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:numStars="5"
+                android:rating="3"
+                />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/prixTableBis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
-        android:textSize="@dimen/bigSize"
-        android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER PRIX"
-        android:background="@color/white"
-        android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="12dp"/>
 
-    <TextView
-        android:id="@+id/dateTableBis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
-        android:textSize="@dimen/bigSize"
-        android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER DATE"
-        android:background="@color/white"
-        android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="12dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/heureTableBis"
-        android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/nomPlatFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="center_horizontal"
+                android:text="Mon Plat"
+                android:textColor="@color/black"
+                android:textSize="@dimen/bigSize"></TextView>
+            <RatingBar
+                android:id="@+id/difficultePlatFragment"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/lightYellow"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:isIndicator="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:numStars="5"
+                android:rating="3"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/nomDessertFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="center_horizontal"
+                android:text="Mon Dessert"
+                android:textColor="@color/black"
+                android:textSize="@dimen/bigSize"></TextView>
+            <RatingBar
+                android:id="@+id/difficulteDessertFragment"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/lightYellow"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:isIndicator="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:numStars="5"
+                android:rating="3"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/prixMenuFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="center_horizontal"
+                android:text="Price"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:textSize="@dimen/bigSize">
+            </TextView>
+            <Button
+                android:id="@+id/wineIndicatorFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/checkbox_color"
+                android:textColor="@color/black"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="center_horizontal"
+                android:text="avec Vin"
+                android:textSize="@dimen/mediumSize"
+                android:layout_weight="1"
+                ></Button>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/VegetarienMenuIndicatorFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:textColor="@color/black"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="center_horizontal"
+                android:text="Vegetarien"
+                android:backgroundTint="@color/checkbox_color"
+                android:textSize="@dimen/mediumSize"
+                android:layout_weight="1"
+                ></Button>
+
+            <Button
+                android:id="@+id/VeganMenuIndicatorFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:textColor="@color/black"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="center_horizontal"
+                android:text="Vegan"
+                android:backgroundTint="@color/checkbox_color"
+                android:textSize="@dimen/mediumSize"
+                android:layout_weight="1"
+                ></Button>
+
+            <Button
+                android:id="@+id/GlutenMenuIndicatorFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:backgroundTint="@color/checkbox_color"
+                android:textColor="@color/black"
+                android:fontFamily="@font/indie_flower"
+                android:gravity="center_horizontal"
+                android:text="Sans gluten"
+                android:textSize="@dimen/mediumSize"
+                android:layout_weight="1"
+                ></Button>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
-        android:textSize="@dimen/bigSize"
-        android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER HEURE"
-        android:background="@color/white"
-        android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="12dp"/>
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Le : "
+            android:fontFamily="@font/indie_flower"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="12dp"/>
+        <TextView
+            android:id="@+id/dateTableBis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/indie_flower"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            android:gravity="center_horizontal"
+            android:text="DATE"
+            android:layout_marginTop="12dp"
+            android:layout_marginHorizontal="6dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" à : "
+            android:fontFamily="@font/indie_flower"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="12dp"/>
+
+        <TextView
+            android:id="@+id/heureTableBis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/indie_flower"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            android:gravity="center_horizontal"
+            android:text="HEURE"
+            android:layout_marginTop="12dp"
+            android:layout_marginHorizontal="6dp"/>
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/adresseTableBis"
@@ -97,18 +251,35 @@
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="12dp"/>
 
-    <TextView
-        android:id="@+id/nomThemeBis"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
-        android:textSize="@dimen/bigSize"
-        android:gravity="center_horizontal"
-        android:text="TABLE PLACEHOLDER THEME"
-        android:background="@color/white"
-        android:layout_marginTop="12dp"
-        android:layout_marginHorizontal="12dp"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thème : "
+            android:fontFamily="@font/indie_flower"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="12dp"/>
+        <TextView
+            android:id="@+id/nomThemeBis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/indie_flower"
+            android:textColor="@color/black"
+            android:textSize="@dimen/bigSize"
+            android:gravity="center_horizontal"
+            android:text="TABLE PLACEHOLDER THEME"
+            android:background="@color/white"
+            android:layout_marginTop="12dp"
+            android:layout_marginHorizontal="12dp"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -155,5 +326,6 @@
             android:textSize="@dimen/mediumSize"
             android:layout_weight="1" />
     </LinearLayout>
+
 
 </LinearLayout>
