--- a/app/src/main/res/layout/activity_recherche_table_step1.xml
+++ b/app/src/main/res/layout/activity_recherche_table_step1.xml
@@ -69,7 +69,7 @@
                     android:layout_height="150dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
-                    android:background="@color/red"
+                    android:background="@color/lightYellow"
                     android:calendarViewShown="false"
                     android:datePickerMode="spinner"
                     android:startYear="2020"
